align fixed

--- a/app/assets/stylesheets/common/structure.scss
+++ b/app/assets/stylesheets/common/structure.scss
@@ -1001,6 +1001,7 @@ body {
 
 /*** new header ***/
 header#new_header{
+  min-height: 109px;
   .new_content{
      border-top: 2px black solid;
      height: 84px;
@@ -1072,7 +1073,7 @@ header#new_header{
           height: 22px;
           text-indent: -9999px;
           display: block;
-          float: left;
+          float: left;¨
           &:hover{
             background: image-url("common/nav/sprite_header.png") no-repeat -71px -31px;
           }
@@ -1088,7 +1089,7 @@ header#new_header{
         &:hover{text-decoration:underline;}
         }
       }
-      #cart_summary{position:absolute;display:none;top:130px;right:0px;z-index:9999;width:304px;min-height:135px;max-height:388px;border:solid 1px #CCC;box-shadow:0 2px 5px #CCC;background:#FFF;padding:15px 0;
+      #cart_summary{position:absolute;display:none;top:115px;right:0px;z-index:9999;width:304px;min-height:135px;max-height:388px;border:solid 1px #CCC;box-shadow:0 2px 5px #CCC;background:#FFF;padding:15px 0;
          .scroll{max-height:297px;overflow-y:auto;padding:0 32px;
             li{
               &.coupon_info{
@@ -1469,7 +1470,8 @@ img.balloon{display:none;position: absolute;width: 174px;height: 185px;z-index:8
     width: 100%;
     overflow: auto;
     display: block;
-    margin: 13px 0 20px 0;
+    margin: 0px 0 20px 0;
+    margin-top:-10px;
   }
   div.box_invite {
     width: 815px;
@@ -1674,6 +1676,45 @@ header div.contact {
 	}
 
 	.minimize{display:block;width:974px;height:42px;position:absolute;top:0;left:0;text-decoration:none;font-size:0;}
+}
+
+ul.breadcrumb {
+  display: block !important;
+  width:100% !important;
+  height:20px !important;
+  position: relative !important;
+  left:6px !important;
+  top:0px !important;
+  li {
+    float:left;
+    display: block;
+    font-family: verdana;
+    font-size: 9px;
+    color:#6d6e71;
+    padding:0 0 0 10px;
+    color:#000;
+    text-align: left;
+    padding-left:5px;
+    a {
+      font-family: verdana !important;
+      background: image-url('product/breadcrumb.gif') right center no-repeat !important;
+      color:#6d6e71  !important;
+      display: block  !important;
+      float:left !important;
+      padding-right:10px !important;
+      text-decoration: none !important;
+      text-align: left !important;
+      min-width: 10px !important;
+      min-height: 10px !important;
+      margin: 0 !important;
+    }
+    a:hover {color:#ef3742;}
+  }
+}
+
+.full_bg .breadcrumb {
+  width: 991px !important;
+  margin: 0 auto;
 }
 
 
